--- a/src/Employee.API/appsettings.json
+++ b/src/Employee.API/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DBConnectionString": "Server=HARDIK-HOME;Database=EmpCleanArch;User Id=sa;Password=Fisv@123;"
+    "DBConnectionString": "Server=LocalDBServer;Database=EmpCleanArch;User Id=sa;Password=abc@123;"
   },
   "Logging": {
     "LogLevel": {
